--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+
     <main>
         <h1>Jenna Ambrose</h1>
         <hr>
+        <p>Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
+            If you have a recommendation for me I would love to hear about it.
+        </p>
     </main>
     
 </body>
