--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jenna Ambrose</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
     <main>
         <h1>Jenna Ambrose</h1>
         <hr>
-        <p>Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
+        <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
             If you have a recommendation for me I would love to hear about it.
         </p>
     </main>
