Added left class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 
     <div class="left">
-        
+        <figure>
+            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
+            <figcaption>Before the Bell Rings</figcaption>
+        </figure>
+        <h2>Upcoming Books:</h2>
     </div>
 
     <main>
