Changed bg color

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="left">
         <figure>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
-            <figcaption>Before the Bell Rings</figcaption>
+            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><figcaption>Before the Bell Rings</figcaption></a>
         </figure>
         <h2>Upcoming Books</h2>
         <h3>City of Refuge</h3>
         <p>
-            Five men ride into Hebron during the time of David, seeking refuge for one who is a manslayer.
+            &nbsp;&nbsp;&nbsp;&nbsp;Five men ride into Hebron during the time of David, seeking refuge for one who is a manslayer.
         </p>
     </div>
 
