--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Upcoming Books</h2>
         <h3>City of Refuge</h3>
         <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;Five men ride into Hebron during the time of David, seeking refuge for one who is a manslayer.
+            &nbsp;&nbsp;&nbsp;&nbsp;Three men ride into Hebron during the time of David, seeking refuge for one who is a manslayer.
         </p>
     </div>
 
