--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="left">
         <figure>
-            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
+            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><figcaption>Before the Bell Rings</figcaption></a>
         </figure>
         <h2>Upcoming Books</h2>
