City of Refuge update desc

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Upcoming Books</h2>
         <h3>City of Refuge</h3>
         <p>
-            &nbsp;&nbsp;&nbsp;&nbsp;Three men ride into Hebron during the time of David, seeking refuge for one who is a manslayer.
+            &nbsp;&nbsp;&nbsp;&nbsp;Three men ride into Hebron, a city of refuge during the time of David's flight from Saul. One has killed a man. It is up to Eliel the scribe, and his son, Phineas, to discover the details and whether the man is deserving the shelter of the city. Was it an accident? A crime of passion? Envy? Revenge? Or Love?
         </p>
     </div>
 
