adding book list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="left">
+        <h2>Featured new Book</h2>
         <figure>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><figcaption>Before the Bell Rings</figcaption></a>
@@ -27,6 +28,15 @@
         <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
             If you have a recommendation for me I would love to hear about it.
         </p>
+        <ul>
+            <li>
+                The Scottish Chiefs, Jane Porter (my all-time favorite)
+            </li>
+            <li>The Pathfinder,The Last of the Mohicans, The Deerslayer, and The Spy, James Fenimore Cooper</li>
+            <li>The Count of Monte Cristo, and The Three Musketeers, Alexandre Dumas</li>
+            <li>Pride and Prejudice, Emma, and Mansfield Park, Jane Austen. I like her other works, too, but these three are my favorite.</li>
+            <li><em>Laddie</em>, Jean Stratton Porter.</li>
+        </ul>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
     
