Added indented ul

--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
         </p>
         <ul>
             <li>
-                The Scottish Chiefs, Jane Porter (my all-time favorite)
+                <em>The Scottish Chiefs</em>, Jane Porter (my all-time favorite)
             </li>
-            <li>The Pathfinder,The Last of the Mohicans, The Deerslayer, and The Spy, James Fenimore Cooper</li>
-            <li>The Count of Monte Cristo, and The Three Musketeers, Alexandre Dumas</li>
-            <li>Pride and Prejudice, Emma, and Mansfield Park, Jane Austen. I like her other works, too, but these three are my favorite.</li>
+            <li><em>The Pathfinder</em>, <em>The Last of the Mohicans</em>, <em>The Deerslayer</em>, and <em>The Spy</em>, James Fenimore Cooper</li>
+            <li><em>The Count of Monte Cristo</em>, and <em>The Three Musketeers</em>, Alexandre Dumas</li>
+            <li><em>Pride and Prejudice</em>, <em>Emma</em>, and <em>Mansfield Park</em>, Jane Austen. I like her other works, too, but these three are my favorite.</li>
             <li><em>Laddie</em>, Jean Stratton Porter.</li>
+            <li><em>Ben-Hur</em>, Lew Wallace</li>
+            <li><em>Up From Slavery</em>, Booker T. Washington</li>
+            <li><em>The Boys in the Boat</em>, Daniel James Brown</li>
+            <li><em>Regency Buck</em>, and <em>Simon the Coldheart</em>, Georgette Heyer</li>
+            <li><em>The Time Travelers</em>, <em>The Time Thief</em>, and <em>The Time Quake</em>, Linda Buckley-Archer</li>
+            <li><em>Jane Eyre</em>, Charlotte Bronte</li>
+            <li><em>To Kill a Mockingbird</em>, Harper Lee</li>
         </ul>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
