Made page for b4tbr

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="left">
         <h2>Featured new Book</h2>
         <figure>
-            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
+            <a href="books/before-the-bell-rings.html"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><figcaption>Before the Bell Rings</figcaption></a>
         </figure>
         <h2>Upcoming Books</h2>
