--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <main>
+        <h1>Before the Bell Rings</h1>
+        <hr>
+        <img class="center" src="../images/b4thebellringscover.png" alt="Before the Bell Rings">
+    </main>
 </body>
 </html>
