--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <em>The Scottish Chiefs</em>, Jane Porter (my all-time favorite)
             </li>
             <li><em>The Pathfinder</em>, <em>The Last of the Mohicans</em>, <em>The Deerslayer</em>, and <em>The Spy</em>, James Fenimore Cooper</li>
+            <li><em>Ivanhoe</em>, Sir Walter Scott</li>
             <li><em>The Count of Monte Cristo</em>, and <em>The Three Musketeers</em>, Alexandre Dumas</li>
             <li><em>Pride and Prejudice</em>, <em>Emma</em>, and <em>Mansfield Park</em>, Jane Austen. I like her other works, too, but these three are my favorite.</li>
             <li><em>Laddie</em>, Jean Stratton Porter.</li>
@@ -44,6 +45,7 @@
             <li><em>Jane Eyre</em>, Charlotte Bronte</li>
             <li><em>To Kill a Mockingbird</em>, Harper Lee</li>
         </ul>
+        <p>Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post it here, or any other comments you would like to make.</p>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
     
