--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><em>Jane Eyre</em>, Charlotte Bronte</li>
             <li><em>To Kill a Mockingbird</em>, Harper Lee</li>
         </ul>
-        <p>Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post it here, or any other comments you would like to make.</p>
+        <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post it here, or any other comments you would like to make!</p>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
     
