Linked back to amazon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="left">
         <h2>Featured new Book</h2>
         <figure>
-            <a href="books/before-the-bell-rings.html"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
+            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
             <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><figcaption>Before the Bell Rings</figcaption></a>
         </figure>
         <h2>Upcoming Books</h2>
@@ -45,7 +45,19 @@
             <li><em>Jane Eyre</em>, Charlotte Bronte</li>
             <li><em>To Kill a Mockingbird</em>, Harper Lee</li>
         </ul>
-        <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post it here, or any other comments you would like to make!</p>
+        <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Do you have any books that you would like to recommend? Or do you have a book that you have written that you think I might like? If so, please post in the comments below, or any other comments you would like to make!</p>
+        <p class="indent">
+            Many of you know that I have 5 children, and I make them read a lot. Also, I love to read aloud to the little ones. Sometimes it can be difficult to find good books at the library. Here is a list of books that I have found to be good, starting with the wee little ones and progressing in age:
+        </p>
+        <ul>
+            <li><em>Nursery Rhymes</em> (Mother Goose is an example)</li>
+            <li><em>Beatrix Potter</em> Books</li>
+            <li><em>Aesop's Fables</em></li>
+            <li><em>Old Mother West Wind</em>, Thornton Burgess</li>
+            <li><em>The Adventures of Chatterer, the Red Squirrel</em>, Thornton Burgess</li>
+            <li><em>Winnie the Pooh</em>, A.A. Milne</li>
+            <li><em>Berenstain Bears Books</em>, Stan and Jan Berenstain</li>
+        </ul>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
     
