Fixed some header issues

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <header><h1>Jenna Ambrose</h1>
+        <hr>
+    </header>
+
     <div class="left">
         <h2>Featured new Book</h2>
         <h3>Before the Bell Rings</h3>
@@ -22,9 +26,11 @@
         </p>
     </div>
 
+    <div class="right">
+        <a href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a>
+    </div>
+
     <main>
-        <h1>Jenna Ambrose</h1>
-        <hr>
         <p class="indent">&nbsp;&nbsp;&nbsp;&nbsp;Hello, and welcome to my website! Many people that know me know that I am not just a writer, but a reader as well. Here is a list of books that I really love.
             If you have a recommendation for me I would love to hear about it.
         </p>
