Spiffed up page, added video

--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -8,10 +8,28 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <h1>Before the Bell Rings</h1>
+    <header><h1>Before the Bell Rings</h1>
         <hr>
-        <img class="center" src="../images/b4thebellringscover.png" alt="Before the Bell Rings">
+    </header>
+
+    <div class="right">
+        <a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a>
+        <br>
+        <a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a>
+    </div>
+
+    <main>
+        <a href="../images/b4thebellringscover.png"><img class="wrapimg" src="../images/b4thebellringscover.png" alt="Before the Bell Rings Cover Picture" title="View Cover"></a>
+        <p class="indentright">
+            &nbsp;&nbsp;&nbsp;&nbsp;Heartbroken by the strange disappearance of their younger sister and the recent loss of their mother, two brothers, Alistair and Samuel Beck, face the demands of owning their father's restaurant at the young ages of 25 and 21. Though their seasoned French chef, Jacques, along with Al's best friend and restaurant manager, Joe, are there to guide and support them, the surly and incompetent staff continually disappoint them. This is further compounded by Sam's utter lack of tolerance for any cook who falls short of perfection.
+        </p>
+        <p class="indentright">&nbsp;&nbsp;&nbsp;&nbsp;Then along comes Li, a young, naïve runaway, running out of money and with a debt to repay, living out of her van and pretending that everything is just fine. With dreams of becoming a top chef, she weasels her way into a non-paying position among the staff in hopes that the brothers will in time hire her. Under Jacques' tutelage, she comes so close to her dreams she can almost taste them--until her past begins to catch up with her. Can Li outrun her past with the help of her friends and enter upon a new and forgiving life? Or will all of her dreams go up in flames? Can the Beck brothers find hope in the midst of chaos? Set in the late 1980's in Washington, D.C., this sweet and funny romance/adventure will keep you guessing down to the last page.</p>
+        <video src="../images/b4tbrvideo.mp4">
+            Your Browser is a pice of Shi*.
+        </video>
+        <div style="width: 400px; margin: 0 auto;">
+            <a class="buynow" href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose-ebook/dp/B084Z2SHH9">View on Amazon!</a>
+        </div>
     </main>
 </body>
 </html>
