--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Featured new Book</h2>
         <h3>Before the Bell Rings</h3>
         <figure>
-            <a href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose/dp/0578621894/"><img title="Buy Before the Bell Rings on Amazon" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
+            <a href="books/before-the-bell-rings.html"><img title="Before the Bell Rings" src="images/b4thebellringscover.png" alt="Before the Bell Rings"></a>
         </figure>
         <h2>Upcoming Books</h2>
         <h3>City of Refuge</h3>
@@ -27,7 +27,9 @@
     </div>
 
     <div class="right">
-        <a href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a>
+        <a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a>
+        <br>
+        <a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a>
     </div>
 
     <main>
