Working on video and autoplay

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     </div>
 
     <div class="right">
-        <a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a>
-        <br>
-        <a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a>
+        <h2>Contact</h2>
+        <ul>
+            <li><a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a></li>
+            <li><a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a></li>
+        </ul>
     </div>
 
     <main>
