--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -23,7 +23,9 @@
     </div>
 
     <main>
-        <video src="../images/b4tbrvideo.mp4" controls autoplay muted></video>
+        <video id="vid" src="../images/b4tbrvideo.mp4" preload="auto" controls autoplay muted></video>
+        <script src="../css/videoKeys.js"></script>
+        
         <a href="../images/b4thebellringscover.png"><img class="wrapimg" src="../images/b4thebellringscover.png" alt="Before the Bell Rings Cover Picture" title="View Cover"></a>
         <p class="indentright">
             &nbsp;&nbsp;&nbsp;&nbsp;Heartbroken by the strange disappearance of their younger sister and the recent loss of their mother, two brothers, Alistair and Samuel Beck, face the demands of owning their father's restaurant at the young ages of 25 and 21. Though their seasoned French chef, Jacques, along with Al's best friend and restaurant manager, Joe, are there to guide and support them, the surly and incompetent staff continually disappoint them. This is further compounded by Sam's utter lack of tolerance for any cook who falls short of perfection.
@@ -32,7 +34,26 @@
         <div style="width: 400px; margin: 0 auto;">
             <a class="buynow" href="https://www.amazon.com/Before-Bell-Rings-Jenna-Ambrose-ebook/dp/B084Z2SHH9">View on Amazon!</a>
         </div>
-        
+        <p><em>
+            <span style="text-decoration: underline;"> Sam's Mango Salsa</span>
+            <ul>
+                <li>6 small vine-ripened tomatoes</li>
+                <li>2 ripe mangoes, diced</li>
+                <li>2 Anaheim Chiles</li>
+                <li>1/2 small red onion, finely diced</li>
+                <li>2 cloves garlic, finely diced</li>
+                <li>1 hand full of fresh cilantro, finely diced</li>
+                <li>Juice of 1 lime</li>
+                <li>1 TB white vinegar</li>
+                <li>1TB light-tasting vegetable oil</li>
+                <li>1/2 t salt </li>
+                <li>2 dashes cayenne pepper</li>
+                <li>1 dash of sugar</li>
+                <li>1/2 t mustard seed</li>
+            </ul>
+            Finely chop all vegetables. Add to a bowl and squeeze lime into vegetables. Add remaining ingredients and stir. Enjoy with blue corn tortilla chips, or as Sam likes to do, add to cooked chicken breasts, then broil with some Monterey Jack cheese for Monterey Chicken!
+        </em>            
+        </p>
     </main>
 </body>
 </html>
