--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Before the Bell Rings web page">
+    <meta name="robots" content="index, follow">
     <title>Before the Bell Rings</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
