--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jenna Ambrose Author homepage">
+    <meta name="robots" content="index, follow">
     <title>Jenna Ambrose</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
@@ -29,7 +31,7 @@
     <div class="right">
         <h2>Contact</h2>
         <ul>
-            <li><a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a></li>
+            <li><a class="email" href="mailto:jennaambrose@gmail.com">Email Jenna Ambrose</a></li>
             <li><a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a></li>
         </ul>
     </div>
