--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -17,7 +17,7 @@
     <div class="right">
         <h2>Contact</h2>
         <ul>
-            <li><a class="email" href="mailto:jennaambrowse@gmail.com">Email Jenna Ambrose</a></li>
+            <li><a class="email" href="mailto:jennaambrose@gmail.com">Email Jenna Ambrose</a></li>
             <li><a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a></li>
         </ul>
         <br>
