--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -41,19 +41,20 @@
             <ul>
                 <li>6 small vine-ripened tomatoes</li>
                 <li>2 ripe mangoes, diced</li>
-                <li>2 Anaheim Chiles</li>
-                <li>1/2 small red onion, finely diced</li>
+                <li>2 Anaheim Chiles, diced</li>
+                <li>1/4 C red onion, finely diced</li>
                 <li>2 cloves garlic, finely diced</li>
-                <li>1 hand full of fresh cilantro, finely diced</li>
+                <li>1/4 C fresh cilantro, finely diced</li>
                 <li>Juice of 1 lime</li>
-                <li>1 TB white vinegar</li>
+                <li>1 TB white wine vinegar</li>
                 <li>1TB light-tasting vegetable oil</li>
-                <li>1/2 t salt </li>
+                <li>1 t salt </li>
                 <li>2 dashes cayenne pepper</li>
-                <li>1 dash of sugar</li>
+                <li>1 t sugar</li>
                 <li>1/2 t mustard seed</li>
             </ul>
-            Finely chop all vegetables. Add to a bowl and squeeze lime into vegetables. Add remaining ingredients and stir. Enjoy with blue corn tortilla chips, or as Sam likes to do, add to cooked chicken breasts, then broil with some Monterey Jack cheese for Monterey Chicken!
+            Finely chop all vegetables. Add to a bowl and squeeze lime into vegetables. Add remaining ingredients and stir. Enjoy with blue corn tortilla chips, or as Sam likes to do, add to cooked chicken breasts, then broil with some Monterey Jack cheese for Monterey Chicken! <br>
+            Serves 10.
         </em>            
         </p>
     </main>
