Got a better video link

--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -25,7 +25,7 @@
     </div>
 
     <main>
-        <video id="vid" src="https://jennaambrose.com/images/b4tbrvideo.mp4" preload="auto" controls autoplay muted></video>
+        <video id="vid" src="https://noahbroyles.club/JennaAmbrose/b4tbrvideo.mp4" preload="auto" controls autoplay muted></video>
         <script src="../css/videoKeys.js"></script>
         
         <a href="../images/b4thebellringscover.png"><img class="wrapimg" src="../images/b4thebellringscover.png" alt="Before the Bell Rings Cover Picture" title="View Cover"></a>
