Added a hella ton of content

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="right">
         <h2>Contact</h2>
         <ul>
-            <li><a class="email" href="mailto:jennaambrose@gmail.com">Email Jenna Ambrose</a></li>
-            <li><a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a></li>
+            <li><a class="email" href="mailto:jennaambrose74@gmail.com">Email Jenna Ambrose</a></li>
+            <li><a class="email" href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
         </ul>
     </div>
 
@@ -53,7 +53,7 @@
             <li><em>Up From Slavery</em>, Booker T. Washington</li>
             <li><em>The Boys in the Boat</em>, Daniel James Brown</li>
             <li><em>Regency Buck</em>, and <em>Simon the Coldheart</em>, Georgette Heyer</li>
-            <li><em>The Time Travelers</em>, <em>The Time Thief</em>, and <em>The Time Quake</em>, Linda Buckley-Archer</li>
+            <li><em>The Gideon Trilogy</em>, Linda Buckley-Archer</li>
             <li><em>Jane Eyre</em>, Charlotte Bronte</li>
             <li><em>To Kill a Mockingbird</em>, Harper Lee</li>
         </ul>
@@ -69,6 +69,32 @@
             <li><em>The Adventures of Chatterer, the Red Squirrel</em>, Thornton Burgess</li>
             <li><em>Winnie the Pooh</em>, A.A. Milne</li>
             <li><em>Berenstain Bears Books</em>, Stan and Jan Berenstain</li>
+            <li><em>Fifty Famous Stories</em>, James Baldwin (my personal favorite)</li>
+            <li><em>Uncle Wiggily and His Friends</em>, Howard R. Garis</li>
+            <li><em>The Tale of Jolly Robin</em>, <em>The Tale of Solomon Owl</em>, <em>The Tale of Reddy Woodpecker</em>, <em>The Tale of Chirpy Cricket</em>, and <em>The Tale of Paddy Muskrat</em> by Arthur Scott Bailey</li>
+            <li><em>Scholastic I Can Read Series</em>, like <em>Sir Small and the Dragonfly</em> and <em>Give Me a Sign, Helen Keller</em></li>
+            <li><em>The Courage of Sarah Noble</em>, Alice Dagliesh</li>
+            <li><em>The Matchlock Gun</em>, Walter D. Edmonds</li>
+            <li><em>The One Hundred Penny Box</em>, Sharon Bell Mathis</li>
+            <li><em>The Boxcar Children Series</em>, Gertrude Chandler Warner</li>
+            <li><em>Farmer Boy</em>, Laura Ingalls Wilder</li>
+            <li><em>Little House Series</em>, Laura Ingalls Wilder</li>
+            <li><em>Pinocchio</em>, C. Collodi</li>
+            <li><em>The Happy Hollisters</em>, Jerry West</li>
+            <li><em>Abel's Island</em>, William Steig</li>
+            <li><em>Chitty, Chitty, Bang, Bang</em>, Ian Fleming</li>
+            <li><em>Bambi</em>, Felix Salten</li>
+            <li><em>Ranger Rick Magazine</em></li>
+            <li><em>Which Way USA Magazine</em></li>
+            <li><em>Hardy Boys or Nancy Drew</em></li>
+            <li><em>The Tom Swift Series</em>, Victor Appleton</li>
+            <li><em>The Rover Boys Series</em></li>
+            <li><em>Ruth Fielding of the Red Mill</em>, Alice B. Emerson</li>
+            <li><em>Anne of Green Gables</em>, L.M. Montgomery (she has many more books that are very good)</li>
+            <li><em>Rebecca of Sunnybrook Farm</em>, Douglas Wiggins</li>
+            <li><em>Nick of Time</em>, Ted Bell</li>
+            <li>Books by Horatio Alger</li>
+            <li>Books by G.A. Henty</li>
         </ul>
         <div class="powr-comments" id="80e72aef_1584554768"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
     </main>
