--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -10,13 +10,13 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header><h1>Before the Bell Rings</h1>
-        <hr>
+    <header>
+        <h1>Before the Bell Rings</h1>
     </header>
 
     <div class="right">
         <h2>Contact</h2>
-        <ul>
+        <ul class="nav">
             <li><a class="email" href="mailto:jennaambrose@gmail.com">Email Jenna Ambrose</a></li>
             <li><a class="email" href="mailto:noah@javamate.net">Contact Webmaster</a></li>
         </ul>
