--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <header><h1>Jenna Ambrose</h1>
-        <hr>
+    <header>
+        <h1>Jenna Ambrose</h1>
     </header>
 
     <div class="left">
