--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="books">
 				<div class="single-book">
 					<a href="./books/before-the-bell-rings.html" class="single-book__img">
-						<img src="./images/beforeTheBellRings.jpg" width="200" alt="single book and cd">
+						<img src="./images/beforeTheBellRings.jpg" width="200" alt="before the bell rings">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
