Added contact links to menu

--- a/books/before-the-bell-rings.html
+++ b/books/before-the-bell-rings.html
@@ -7,9 +7,12 @@
     <meta name="robots" content="index, follow">
     <title>Before the Bell Rings</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/slick.css">
-    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="../css/slick.css">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <!-- Scripts -->
+	<script src="../js/jquery.min.js"></script>
+	<script src="../js/slick.min.js"></script>
+	<script src="../js/main.js"></script>
 </head>
 <body>
     
@@ -18,7 +21,9 @@
 		<div class="site-navigation-inner site-container">
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
-					<li><a href="../index.html">Homepage</a></li>
+                    <li><a href="/">Homepage</a></li>
+                    <li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
+					<li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
 				</ul>
 			</div>
 			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
@@ -51,7 +56,7 @@
 	</section>
     <main>
         <video id="vid" src="https://noahbroyles.club/JennaAmbrose/b4tbrvideo.mp4" preload="auto" controls autoplay muted></video>
-        <script src="../css/videoKeys.js"></script>
+        <script src="../js/videoKeys.js"></script>
         <!--
         <a href="../images/b4thebellringscover.png"><img class="wrapimg" src="../images/b4thebellringscover.png" alt="Before the Bell Rings Cover Picture" title="View Cover"></a>
         <p class="indentright">
