--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 		<div class="site-navigation-inner site-container">
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
-					<li><a href="#">Page 3</a></li>
-					<li><a href="#">Page 4</a></li>
+					<li><a href="/">Homepage</a></li>
+					<li><a href="mailto:jennaambrose74@gmail.com">Email Jenna</a></li>
+					<li><a href="mailto:noahbroyles42@gmail.com">Contact Webmaster</a></li>
 				</ul>
 			</div>
 			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
